--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "stylelint-scss": "^5.3.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.2"
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2"
   }
 }
